[tool.poetry]
name = "prefect-test"
version = "0.1.0"
description = ""
authors = ["Vadzim Kashko <v.kashko@trainingdata.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
prefect = "^2.16.6"
prefect-gitlab = "^0.2.2"
prefect-github = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
